--- a/changes.html
+++ b/changes.html
@@ -24,8 +24,8 @@ HREF="mailto:simon@switch.ch">simon@switch.ch</A>&gt;</p>
 
 <ul>
 
-<li> SNMP_util.pm 1.11: Fix from Mike Mitchell loop detection in
-  snmpwalk.  Should cope with more broken agents. </li>
+<li> SNMP_util.pm 1.11: Improvement to loop detection in snmpwalk.
+  Should cope with more broken agents.  Change by Mike Mitchell. </li>
 
 <li> SNMP_Session.pm 1.10: Mike Fischer reported that on some systems,
  notably Linux, <tt>recv()</tt> may block even though a
