--- a/trunk/changes.html
+++ b/trunk/changes.html
@@ -649,7 +649,7 @@ use SNMP_Session "0.52";
  href="mailto:dlr@Bungi.com">Dave Rand</a> </li>
 
   <li> Decoding longer (unsigned) integers, by <a
- href="mailto:oetiker@ee.ethz.ch">Tobias Oetiker</a> </li>
+ href="mailto:tobi@oetiker.ch">Tobias Oetiker</a> </li>
 
   <li> Decoding longer strings, by <a
  href="mailto:san@iem.pw.edu.pl">Andrzej Tobola</a> </li>
