Updated my e-mail address and MRTG URL.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <p>Author: <A HREF="http://www.switch.ch/misc/leinen/">Simon
 Leinen</A> &lt;<A
-HREF="mailto:simon@switch.ch">simon@switch.ch</A>&gt;</p>
+HREF="mailto:simon.leinen@switch.ch">simon.leinen@switch.ch</A>&gt;</p>
 
 </DIV>
 
@@ -64,11 +64,11 @@ remainder of this page desribes the low-level API in
  "get-bulk" and "set", as well as trap generation and reception. </p>
 
 <p> For an excellent example of the type of application this is useful
- for, see Tobias Oetiker's <a
- href="http://ee-staff.ethz.ch/~oetiker/webtools/mrtg/mrtg.html">``mrtg''
- (Multi Router Traffic Grapher)</a> tool.  Another application that
- uses this library is <a href="http://www.dynw.com/iog/">IOG</a>
- (Input/Output Grapher). </p>
+ for, see Tobias
+ Oetiker's <a href="URL:http://oss.oetiker.ch/mrtg/">``mrtg'' (Multi
+ Router Traffic Grapher)</a> tool.  Another application that uses this
+ library is <a href="http://www.dynw.com/iog/">IOG</a> (Input/Output
+ Grapher). </p>
 
 <h2> Recent Changes: </h2>
 
@@ -393,7 +393,7 @@ while ($bindings ne '') {
 <HR>
 <ADDRESS>
 <!-- hhmts start -->
-20070518
+20071013
 <!-- hhmts end -->
 <A HREF="http://www.switch.ch/misc/leinen/">
  Simon Leinen &lt;simon.leinen@switch.ch&gt;</A>
