--- a/trunk/faq.html
+++ b/trunk/faq.html
@@ -60,12 +60,12 @@ process, making the cache persistent might not be necessary. </p>
 
 <hr>
 <!-- hhmts start -->
-2006/08/06 20:25:22
+2007/10/13 19:15:00
 <!-- hhmts end -->
 <address>
 
  <a href="http://www.switch.ch/misc/leinen/">
-  Simon Leinen &lt;simon@switch.ch&gt;
+  Simon Leinen &lt;simon.leinen@switch.ch&gt;
  </a>
 </address>
 
