--- a/changes.html
+++ b/changes.html
@@ -7,7 +7,7 @@
 <DIV ALIGN=CENTER>
   <H1>SNMP support for Perl 5: Changes</H1>
 
-  <p> Copyright (c) 1995-2007, Simon Leinen<br>
+  <p> Copyright (c) 1995-2008, Simon Leinen<br>
   All rights reserved </p>
 
   <em> This program is free software; you can redistribute it under
@@ -23,6 +23,12 @@ HREF="mailto:simon@switch.ch">simon@switch.ch</A>&gt;</p>
 <h2> Recent Changes: </h2>
 
 <ul>
+
+<li> SNMP_Session.pm 1.12: Upgraded to Artistic License 2.0 upon a
+  suggestion from Tom Callaway. </li>
+
+<li> SNMP_util.pm 1.12: Rewritten MIB parsing code from Mike
+ Mitchell. </li>
 
 <li> SNMP_util.pm 1.11: Improvement to loop detection in snmpwalk.
   Should cope with more broken agents.  Change by Mike Mitchell. </li>
@@ -668,7 +674,7 @@ use SNMP_Session "0.52";
 <HR>
 <ADDRESS>
 <!-- hhmts start -->
-20071013
+20080319
 <!-- hhmts end -->
 <A HREF="http://www.switch.ch/misc/leinen/">
  Simon Leinen &lt;simon.leinen@switch.ch&gt;</A>
