--- a/trunk/index.html
+++ b/trunk/index.html
@@ -7,12 +7,12 @@
 <DIV ALIGN=CENTER>
   <H1>SNMP support for Perl 5</H1>
 
-  <p> Copyright (c) 1995-2007, Simon Leinen<br>
+  <p> Copyright (c) 1995-2008, Simon Leinen<br>
   All rights reserved </p>
 
   <em> This program is free software; you can redistribute it under
-  the <a href="http://language.perl.com/misc/Artistic.html">"Artistic
-  License"</a> included in this distribution. </em>
+  the <a href="dist/Artistic">"Artistic License 2.0"</a> included in
+  this distribution. </em>
 
   <p>Author: <A HREF="http://www.switch.ch/misc/leinen/">Simon
 Leinen</A> &lt;<A
@@ -393,7 +393,7 @@ while ($bindings ne '') {
 <HR>
 <ADDRESS>
 <!-- hhmts start -->
-20071013
+20080402
 <!-- hhmts end -->
 <A HREF="http://www.switch.ch/misc/leinen/">
  Simon Leinen &lt;simon.leinen@switch.ch&gt;</A>
