Added POD documentation to SNMP_Session.pm.
All public interfaces of SNMP_Session.pm and BER.pm should now be
documented as POD in the source files.  The examples that used to be
in the "Usage" section of README and index.html have been moved to an
"EXAMPLES" POD section in SNMP_Session.pm.

--- a/changes.html
+++ b/changes.html
@@ -7,7 +7,7 @@
 <DIV ALIGN=CENTER>
   <H1>SNMP support for Perl 5: Changes</H1>
 
-  <p> Copyright (c) 1995-2008, Simon Leinen<br>
+  <p> Copyright (c) 1995-2009, Simon Leinen<br>
   All rights reserved </p>
 
   <em> This program is free software; you can redistribute it under
@@ -16,13 +16,18 @@
 
   <p>Author: <A HREF="http://www.switch.ch/misc/leinen/">Simon
 Leinen</A> &lt;<A
-HREF="mailto:simon@switch.ch">simon@switch.ch</A>&gt;</p>
+HREF="mailto:simon.leinen@switch.ch">simon.leinen@switch.ch</A>&gt;</p>
 
 </DIV>
 
 <h2> Recent Changes: </h2>
 
 <ul>
+
+<li> BER.pm 1.14: Added POD documentation.  Started adding automated
+  unit tests. </li>
+
+<li> SNMP_Session.pm 1.14: Added POD documentation. </li>
 
 <li> SNMP_util.pm 1.13: Parse OIDs in NOTIFICATION-TYPE names.  Change
  by Mike Mitchell/jaccobs. </li>
@@ -679,7 +684,7 @@ use SNMP_Session "0.52";
 
 <HR>
 <ADDRESS>
-<!-- hhmts start -->20081120
+<!-- hhmts start -->20091228
 <!-- hhmts end -->
 <A HREF="http://www.switch.ch/misc/leinen/">
  Simon Leinen &lt;simon.leinen@switch.ch&gt;</A>
