--- a/changes.html
+++ b/changes.html
@@ -24,6 +24,8 @@ HREF="mailto:simon.leinen@switch.ch">simon.leinen@switch.ch</A>&gt;</p>
 
 <ul>
 
+<li> SNMP_Session.pm 1.15: Apply Socket6 patch from FreeBSD ports. </li>
+
 <li> SNMP_Session.pm 1.14: <tt>open_trap_session</tt> now takes an
   optional <tt>ipv4only</tt> argument.  It defaults to 1, but by
   passing 0, you can create a session that accepts traps over IPv6 in
