--- a/changes.html
+++ b/changes.html
@@ -7,7 +7,7 @@
 <DIV ALIGN=CENTER>
   <H1>SNMP support for Perl 5: Changes</H1>
 
-  <p> Copyright (c) 1995-2009, Simon Leinen<br>
+  <p> Copyright (c) 1995-2023, Simon Leinen<br>
   All rights reserved </p>
 
   <em> This program is free software; you can redistribute it under
@@ -23,6 +23,12 @@ HREF="mailto:simon.leinen@switch.ch">simon.leinen@switch.ch</A>&gt;</p>
 <h2> Recent Changes: </h2>
 
 <ul>
+
+<li> SNMP_Session.pm 1.16: Packaging improvements from Michal Josef
+  &Scaron;pa&ccaron;ek. </li>
+
+<li> test/get-cisco-power-usage.pl: New demo script to receive power
+  utilization from Cisco routers using CISCO-ENTITY-SENSOR-MIB. </li>
 
 <li> SNMP_Session.pm 1.15: Apply Socket6 patch from FreeBSD ports. </li>
 
